# Wisent

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  memoryBenchmark.sh  prepare_data.sh
Benchmarks/: WisentBenchmarks.cpp
Benchmarks/Python/: Aggregation.py  WisentDeserializer.py
Example/: example.json  example.wisent
Source/: BsonSerializer.cpp  BsonSerializer.hpp  CsvLoading.hpp  SharedMemorySegment.cpp  SharedMemorySegment.hpp  WisentHelpers.h  WisentSerializer.cpp  WisentSerializer.h  WisentSerializer.hpp  WisentServer.cpp
WisentParser/WisentParser/: WisentBindings.c  WisentBindings.h  WisentParser-Bridging-Header.h  main.swift
WisentParser/WisentParser.xcodeproj/: project.pbxproj
